--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
+    "@google/model-viewer": "^3.2.1",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-web": "^0.19.7"
+    "react-native-web": "^0.19.7",
+    "three": "^0.155.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
