--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
     "@google/model-viewer": "^3.2.1",
+    "bootstrap": "^5.3.1",
     "expo": "~49.0.5",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "^0.19.7",
     "three": "^0.155.0"
   },
