--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.19.7",
+    "reactstrap": "^9.2.0",
     "three": "^0.155.0"
   },
   "devDependencies": {
